--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-baseurl: '/'
+baseurl: ''
 permalink: pretty
-title: 'Jekyll Serif'
+title: 'Sahasra IT Pty Ltd'
 
 logo:
   mobile: "images/logo/logo-mobile.svg"
