--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ sass:
   style: compressed # possible values: nested expanded compact compressed
 
 plugins:
-  - jekyll-environment-variables
+#  - jekyll-environment-variables
 
 exclude:
   - Gemfile
