--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 url: "https://isuserselva.github.io/sahasrait.github.io/"
-baseurl: ""
+baseurl: "/sahasrait.github.io"
 permalink: pretty
 title: 'Sahasra IT Pty Ltd'
 
