--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: "https://isuserselva.github.io/sahasrait.github.io/"
+url: "https://isuserselva.github.io"
 baseurl: "/sahasrait.github.io"
 permalink: pretty
 title: 'Sahasra IT Pty Ltd'
