--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 url: "https://isuserselva.github.io"
-baseurl: "/sahasrait.github.io"
+baseurl: "/sahasrait"
 permalink: pretty
 title: 'Sahasra IT Pty Ltd'
 
